--- a/oopsmenfile.html
+++ b/oopsmenfile.html
@@ -316,7 +316,45 @@
         //machine.#display(); //error
         machine.printValues();
 
+        ///////////      Encapsulation: Protected Properties and Methods          ///////////         
+        class Account {
+            constructor() {
+                this.balance = 10000;
+                this._statement = [];
+            }
+            deposit(amount) {
+                this._statement.push(amount);
+            }
+            withdraw(amount) {
+                this._statement.push(-amount);
+            }
+            getStatement() {
+                return this._statement;
+            }
+        }
+        const hdfcAcnt = new Account();
+        hdfcAcnt.deposit(5000);
+        hdfcAcnt.deposit(10000);
+        hdfcAcnt.withdraw(8000);
+        console.log(hdfcAcnt.getStatement());
 
+        ////////////////
+        class Account1 {
+            constructor(balance) {
+                this.balance = balance;
+            }
+            deposit(amount) {
+                this.balance += amount;
+                return this;
+            }
+            withdraw(amount) {
+                this.balance -= amount;
+                return this;
+            }
+        }
+        const myAccount = new Account1(5000);
+        myAccount.deposit(5000).deposit(10000).withdraw(3000).withdraw(2000);
+        console.log(myAccount);
 
 
     </script>
